objects/User_Learning_Category__c.object
<CustomObject>
    <fields>
        <fullName>Display_Sequence_Nbr__c</fullName>
        <label>Display Sequence Nbr</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Learning_Board_ID__c</fullName>
        <label>Learning Board ID</label>
        <referenceTo>Learning_Board__c</referenceTo>
        <relationshipLabel>User Learning Categories</relationshipLabel>
        <relationshipName>User_Learning_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>User Learning Category</label>
    <nameField>
        <displayFormat>ULC-{00000000}</displayFormat>
        <label>User Learning Category ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Learning Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>